--- a/style_quiz.css
+++ b/style_quiz.css
@@ -1,4 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+/* font-family: 'Russo One', sans-serif; */
+
+@import url('https://fonts.googleapis.com/css2?family=Sigmar&display=swap');
+/* font-family: 'Sigmar', cursive; */
+
+@import url('https://fonts.googleapis.com/css2?family=Wendy+One&display=swap');
+/* font-family: 'Wendy One', sans-serif; */
+
 * {
+    font-family: 'Russo One', sans-serif;
     margin: 0, auto;
 }
 
